# AiBoi

./: .gitignore  Dockerfile  Procfile  README.md  codebase.md  config.example.yaml  main.py  mcp_servers.example.json  prompt.txt  pyproject.toml  requirements.txt  setup.sh  setup_mcp.sh  stream_eaxmple.py  telegram_bot.py
ai-cli-assistant/: .dockerignore  .env.example  .gitignore  README.md  config.example.yaml  mcp_servers.example.json  railway.json  requirements-bots.txt  requirements.txt
ai-cli-assistant/ai_cli/: cli.py  config.py  session.py
ai-cli-assistant/ai_cli/bots/: __init__.py  common.py  discord_bot.py  telegram_bot.py
ai-cli-assistant/ai_cli/mcp/: client.py  manager.py
ai-cli-assistant/ai_cli/providers/: __init__.py  openai_provider.py
ai-cli-assistant/ai_cli/tools/: builtin.py  registry.py
ai_cli/: cli.py  config.py  health.py  mcp_tool.py  repl.py  session.py  wizard.py
ai_cli/bots/: common.py  common.py.save  telegram_bot.py
ai_cli/mcp/: client.py
ai_cli/providers/: anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
ai_cli/tools/: builtin.py  registry.py
go-learning/: CHEATSHEET.md  README.md
go-learning/01-hello-world/: main.go
go-learning/02-variables/: main.go
go-learning/03-control-flow/: main.go
go-learning/04-functions/: main.go
go-learning/05-structs-interfaces/: main.go
go-learning/06-goroutines-channels/: main.go
go-learning/07-error-handling/: main.go
go-learning/08-packages/: main.go
